--- a/pagamento.html
+++ b/pagamento.html
@@ -29,9 +29,15 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-W2LG2C7K');</script>
     <!-- End Google Tag Manager -->
-     
+
 </head>
 <body>
+
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2LG2C7K"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+   
 
   <!-- Navbar padrão -->
   <nav class="navbar navbar-expand-lg navbar-dark tpg sticky-top">
