--- a/privacy.html
+++ b/privacy.html
@@ -28,7 +28,11 @@
 </head>
 <body>
 
-
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2LG2C7K"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+   
 <!-- Navbar inline -->
 <nav class="navbar navbar-expand-lg navbar-dark tpg sticky-top">
   <div class="container">
