--- a/cep.html
+++ b/cep.html
@@ -9,15 +9,23 @@
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="stylesheet" href="assets/css/cep.css">
 
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-XZ6RD9SGHR');
-</script>
+   <!-- Google tag (gtag.js) -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
+   <script>
+     window.dataLayer = window.dataLayer || [];
+     function gtag(){dataLayer.push(arguments);}
+ 
+     // Configuração padrão (sem consentimento ainda)
+     gtag('consent', 'default', {
+       'ad_storage': 'denied',
+       'analytics_storage': 'denied'
+     });
+ 
+     gtag('js', new Date());
+     gtag('config', 'G-XZ6RD9SGHR');
+   </script>
+
 
    <!-- Google Tag Manager -->
    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
