--- a/fipe.html
+++ b/fipe.html
@@ -9,16 +9,21 @@
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="stylesheet" href="assets/css/fipe.css">
 
-  <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+ <!-- Google tag (gtag.js) -->
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
+ <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
 
-  gtag('config', 'G-XZ6RD9SGHR');
-</script>
+   // Configuração padrão (sem consentimento ainda)
+   gtag('consent', 'default', {
+     'ad_storage': 'denied',
+     'analytics_storage': 'denied'
+   });
 
+   gtag('js', new Date());
+   gtag('config', 'G-XZ6RD9SGHR');
+ </script>
 </head>
 <body>
 
