--- a/privacy.html
+++ b/privacy.html
@@ -46,6 +46,7 @@
         <li class="nav-item"><a class="nav-link "  href="fipe.html">Consultar FIPE</a></li>
         <li class="nav-item"><a class="nav-link " href="qrcode.html">Gerar QR Code</a></li>
         <li class="nav-item"><a class="nav-link " href="pagamento.html">Pagamento</a></li>
+        <li class="nav-item"><a class="nav-link " href="calculadora-imc.html">Calculadora IMC</a></li>
         <li class="nav-item"><a class="nav-link " href="https://f4e38d4c63c0.ngrok-free.app/ngl/frontend/login.html">Login</a></li>
       </ul>
     </div>
