--- a/fipe.html
+++ b/fipe.html
@@ -27,28 +27,13 @@
 </head>
 <body>
 
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark tpg sticky-top">
-  <div class="container">
-    <a class="navbar-brand" href="index.html">TPG<span>Online</span></a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="mainNav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link " href="index.html">Início</a></li>
-        <li class="nav-item"><a class="nav-link " href="cnpj.html">Consultar CNPJ</a></li>
-        <li class="nav-item"><a class="nav-link "  href="cep.html">Consultar CEP</a></li>
-        <li class="nav-item"><a class="nav-link "  href="ncm.html">Consultar NCM</a></li>
-        <li class="nav-item"><a class="nav-link active"  href="fipe.html">Consultar FIPE</a></li>
-        <li class="nav-item"><a class="nav-link " href="qrcode.html">Gerar QR Code</a></li>
-        <li class="nav-item"><a class="nav-link " href="pagamento.html">Pagamento</a></li>
-        <li class="nav-item"><a class="nav-link " href="calculadora-imc.html">Calculadora IMC</a></li>
-        <li class="nav-item"><a class="nav-link " href="https://f4e38d4c63c0.ngrok-free.app/ngl/frontend/login.html">Login</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+
+  <!-- Navbar inline -->
+ <!-- ====== INCLUDES ====== -->
+ <div data-include="/assets/partials/cookie-banner.html"></div>
+ <div data-include="/assets/partials/navbar.html"></div>
+ <!-- ====================== -->
+
 
 <main class="section">
   <div class="container container-narrow">
@@ -121,19 +106,19 @@
   </div>
 </main>
 
-<footer class="site-footer py-4">
-  <div class="container text-center small">
-    © <span id="year"></span> TPG Online · 
-    <a href="privacy.html">Privacidade</a> · 
-    <a href="terms.html">Termos</a> · 
-    <a href="cookies.html">Cookies</a>
-  </div>
-</footer>
+<!-- Rodapé (include) -->
+<div data-include="/assets/partials/footer.html"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<!-- IMPORTANTE: carregar os includes -->
+<script src="assets/js/includes.js" defer></script>
 <script src="assets/js/fipe.js" defer></script>
+
 <script>
   document.getElementById('year').textContent = new Date().getFullYear();
 </script>
+
+
 </body>
 </html>
