--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Inicio • TPG Online</title>
   <meta name="description" content="TPG Online">
+
+  <!-- Bootstrap + Tema -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="stylesheet" href="assets/css/index.css">
@@ -14,124 +16,30 @@
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
-
-    // Configuração padrão (sem consentimento ainda)
-    gtag('consent', 'default', {
-      'ad_storage': 'denied',
-      'analytics_storage': 'denied'
-    });
-
+    gtag('consent', 'default', { 'ad_storage': 'denied', 'analytics_storage': 'denied' });
     gtag('js', new Date());
     gtag('config', 'G-XZ6RD9SGHR');
   </script>
 
-  
-
-  <style>
-    .cookie-banner {
-      position: fixed;
-      bottom: 0;
-      left: 0; right: 0;
-      background: #111;
-      color: #fff;
-      padding: 15px;
-      text-align: center;
-      z-index: 1000;
-      display: none;
-    }
-    .cookie-banner a { color: #58a6ff; }
-  </style>
-
-          <!-- Google Tag Manager -->
-        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-          new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-          j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-          'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-          })(window,document,'script','dataLayer','GTM-W2LG2C7K');</script>
-          <!-- End Google Tag Manager -->
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-W2LG2C7K');</script>
+  <!-- End Google Tag Manager -->
 </head>
 
 <body>
-
   <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2LG2C7K"
-  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-W2LG2C7K"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-   
 
-  <!-- Banner de Cookies -->
-  <div id="cookie-banner" class="cookie-banner">
-    <p>
-      Usamos cookies para melhorar sua experiência. Alguns são essenciais, outros opcionais.
-      Veja nossa <a href="cookies.html">Política de Cookies</a>.
-    </p>
-    <div class="mt-2">
-      <button id="acceptCookies" class="btn btn-primary btn-sm">Aceitar Cookies</button>
-      <button id="rejectCookies" class="btn btn-outline-light btn-sm">Recusar Cookies</button>
-    </div>
-  </div>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", () => {
-      const banner = document.getElementById("cookie-banner");
-      const choice = localStorage.getItem("cookiesChoice");
-
-      if (!choice) {
-        banner.style.display = "block";
-      } else if (choice === "accepted") {
-        gtag('consent', 'update', {
-          'ad_storage': 'granted',
-          'analytics_storage': 'granted'
-        });
-      } else if (choice === "rejected") {
-        gtag('consent', 'update', {
-          'ad_storage': 'denied',
-          'analytics_storage': 'denied'
-        });
-      }
-
-      document.getElementById("acceptCookies").onclick = () => {
-        localStorage.setItem("cookiesChoice", "accepted");
-        banner.style.display = "none";
-        gtag('consent', 'update', {
-          'ad_storage': 'granted',
-          'analytics_storage': 'granted'
-        });
-      };
-
-      document.getElementById("rejectCookies").onclick = () => {
-        localStorage.setItem("cookiesChoice", "rejected");
-        banner.style.display = "none";
-        gtag('consent', 'update', {
-          'ad_storage': 'denied',
-          'analytics_storage': 'denied'
-        });
-      };
-    });
-  </script>
-
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark tpg sticky-top">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">TPG<span>Online</span></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="mainNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link active" href="index.html">Início</a></li>
-          <li class="nav-item"><a class="nav-link" href="cnpj.html">Consultar CNPJ</a></li>
-          <li class="nav-item"><a class="nav-link" href="cep.html">Consultar CEP</a></li>
-          <li class="nav-item"><a class="nav-link" href="ncm.html">Consultar NCM</a></li>
-          <li class="nav-item"><a class="nav-link" href="fipe.html">Consultar FIPE</a></li>
-          <li class="nav-item"><a class="nav-link" href="qrcode.html">Gerar QR Code</a></li>
-          <li class="nav-item"><a class="nav-link" href="pagamento.html">Pagamento</a></li>
-          <li class="nav-item"><a class="nav-link " href="calculadora-imc.html">Calculadora IMC</a></li>
-          <li class="nav-item"><a class="nav-link" href="https://f4e38d4c63c0.ngrok-free.app/ngl/frontend/login.html">Login</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  <!-- ====== INCLUDES (carregados pelo assets/js/includes.js) ====== -->
+  <div data-include="/assets/partials/cookie-banner.html"></div>
+  <div data-include="/assets/partials/navbar.html"></div>
+  <!-- ============================================================= -->
 
   <!-- Hero -->
   <header class="hero section">
@@ -196,7 +104,7 @@
           <p>Crie QR Codes personalizados.</p>
         </a>
 
-        <a href="pagamento.html" class="feature-btn">
+        <a href="colaborar.html" class="feature-btn">
           <i class="fa-solid fa-hand-holding-dollar"></i>
           <h5>Apoiar o Site</h5>
           <p>Contribua com o projeto TPG Online 💙</p>
@@ -205,17 +113,11 @@
     </div>
   </section>
 
-  <!-- Rodapé -->
-  <footer class="site-footer py-4">
-    <div class="container text-center small">
-      © <span id="year"></span> TPG Online · 
-      <a href="privacy.html">Privacidade</a> · 
-      <a href="terms.html">Termos</a> · 
-      <a href="cookies.html">Cookies</a>
-    </div>
-  </footer>
+  <!-- Rodapé (include) -->
+  <div data-include="/assets/partials/footer.html"></div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script src="assets/js/includes.js" defer></script>
 </body>
 </html>
