--- a/colaborar.html
+++ b/colaborar.html
@@ -51,9 +51,10 @@
           <!-- BOTÃO/LINK DIRETO (substitua o href abaixo pelo seu link do Mercado Pago) -->
           <div class="d-grid">
             <!-- COLE AQUI O SEU LINK -->
-            <a href="https://mpago.la/1y8b5Br" class="btn btn-primary btn-lg d-flex align-items-center justify-content-center gap-2" target="_blank" rel="noopener noreferrer">
-              <span>Colaborar agora</span>
-            </a>
+            <script src="https://www.mercadopago.com.br/integrations/v1/web-payment-checkout.js"
+            data-preference-id="179146356-2bbe0457-bcb4-4628-a85d-58ce359a3a7b" data-source="button"  >
+            </script>
+            
           </div>
 
           <hr class="my-4 border-secondary-subtle">
