--- a/colaborar.html
+++ b/colaborar.html
@@ -48,14 +48,15 @@
             <div class="progress-bar" style="width: 89%;">89%</div>
           </div>
 
-          <!-- BOTÃO/LINK DIRETO (substitua o href abaixo pelo seu link do Mercado Pago) -->
           <div class="d-grid">
-            <!-- COLE AQUI O SEU LINK -->
+            <!-- Botão Mercado Pago -->
             <script src="https://www.mercadopago.com.br/integrations/v1/web-payment-checkout.js"
-            data-preference-id="179146356-2bbe0457-bcb4-4628-a85d-58ce359a3a7b" data-source="button"  >
+                    data-preference-id="179146356-2bbe0457-bcb4-4628-a85d-58ce359a3a7b"
+                    data-source="button"
+                    data-button-label="Clique aqui para Colaborar">
             </script>
-            
           </div>
+          
 
           <hr class="my-4 border-secondary-subtle">
 
