--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <a class="btn btn-outline-light btn-lg" href="ncm.html">Consultar NCM</a>
             <a class="btn btn-outline-light btn-lg" href="fipe.html">Consultar FIPE</a>
             <a class="btn btn-outline-light btn-lg" href="qrcode.html">Gerar QR Code</a>
+            <a class="btn btn-outline-light btn-lg" href="calculadora-imc.html">Calculadora IMC</a>
             <a href="https://wa.me/5518997329690?text=Ol%C3%A1%2C+tenho+interesse+em+criar+uma+landing+page" 
                target="_blank" class="btn btn-success btn-lg">
                📲 Criar Minha Landing Page
@@ -119,5 +120,10 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <script src="assets/js/includes.js" defer></script>
+  <script src="assets/js/check-session.js" defer></script>
+  <script src="assets/js/auth-guard.js" defer></script>
+  <script src="assets/js/check-session.js" defer></script>
+
+
 </body>
 </html>
