--- a/calculadora-imc.html
+++ b/calculadora-imc.html
@@ -255,6 +255,8 @@
   <script src="assets/js/includes.js" defer></script>
   <!-- Seu JS da calculadora -->
   <script src="assets/js/imc.js" defer></script>
+  <script src="assets/js/check-session.js" defer></script>
+
 
 </body>
 </html>
