--- a/cnpj.html
+++ b/cnpj.html
@@ -104,6 +104,6 @@
   <!-- IMPORTANTE: carregar os includes -->
   <script src="assets/js/includes.js" defer></script>
   <script src="assets/js/cnpj.js" defer></script>
-
+  <script src="assets/js/check-session.js" defer></script>
 </body>
 </html>
