--- a/fipe.html
+++ b/fipe.html
@@ -114,6 +114,7 @@
 <!-- IMPORTANTE: carregar os includes -->
 <script src="assets/js/includes.js" defer></script>
 <script src="assets/js/fipe.js" defer></script>
+<script src="assets/js/check-session.js" defer></script>
 
 <script>
   document.getElementById('year').textContent = new Date().getFullYear();
