--- a/qrcode.html
+++ b/qrcode.html
@@ -105,6 +105,7 @@
 <script src="assets/js/includes.js" defer></script>
 
 <script src="assets/js/qrcode.js"></script>
+<script src="assets/js/check-session.js" defer></script>
 <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
