--- a/cep.html
+++ b/cep.html
@@ -119,7 +119,7 @@
     <!-- IMPORTANTE: carregar os includes -->
     <script src="assets/js/includes.js" defer></script>
     <script src="assets/js/cep.js" defer></script>
-
+    <script src="assets/js/check-session.js" defer></script>
 
 </body>
 </html>
