--- a/colaborar.html
+++ b/colaborar.html
@@ -86,5 +86,7 @@
   <!-- IMPORTANTE: carregar os includes -->
   <script src="assets/js/includes.js" defer></script>
 
+  <script src="assets/js/check-session.js" defer></script>
+
 </body>
 </html>
