--- a/cookies.html
+++ b/cookies.html
@@ -62,6 +62,7 @@
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
  <!-- IMPORTANTE: carregar os includes -->
  <script src="assets/js/includes.js" defer></script>
+ <script src="assets/js/check-session.js" defer></script>
  
 </body>
 </html>
