--- a/ncm.html
+++ b/ncm.html
@@ -108,6 +108,6 @@
 
   <script src="assets/js/copy.js"></script>
   <script src="assets/js/ncm.js" defer></script>
-
+  <script src="assets/js/check-session.js" defer></script>
 </body>
 </html>
