--- a/obrigado.html
+++ b/obrigado.html
@@ -66,7 +66,7 @@
  <!-- Scripts -->
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
  <script src="assets/js/includes.js" defer></script>
-
+ <script src="assets/js/check-session.js" defer></script>
 
 </body>
 </html>
