--- a/main.html
+++ b/main.html
@@ -64,7 +64,7 @@
             Aqui você encontra, em um só lugar, as principais ferramentas que já usa no TPG Online.
           </p>
           <p class="text-muted mb-0 small">
-            Acesse as consultas, utilitários e recursos que facilitam seu dia a dia — tudo de graça.
+            Acesse consultas, utilitários e também suas notas pessoais — tudo de graça.
           </p>
         </div>
         <div class="col-12 col-lg-5 text-lg-end text-center">
@@ -96,6 +96,15 @@
             <p>Veja dados completos de empresas com rapidez.</p>
           </div>
           <span class="main-card-tag">Documentos</span>
+        </a>
+
+        <!-- Minhas Notas -->
+        <a href="notes.html" class="main-card">
+          <div>
+            <h5>Minhas Notas</h5>
+            <p>Guarde ideias, lembretes e rascunhos só seus.</p>
+          </div>
+          <span class="main-card-tag">Pessoal</span>
         </a>
 
         <!-- CEP -->
