--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/notes.css">
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
@@ -175,6 +176,28 @@
     </div>
   </section>
 
+  <!-- Dashboard de notas -->
+  <section id="main-notes-section" class="section py-5 main-notes-section">
+    <div class="container">
+      <div class="d-flex flex-column flex-lg-row align-items-lg-center justify-content-between gap-3 mb-4">
+        <div>
+          <h2 class="text-info fw-bold mb-1">Suas notas salvas</h2>
+          <p class="text-muted mb-0 small">
+            Visualize rapidamente tudo o que voce registrou sem sair do painel.
+          </p>
+        </div>
+        <a href="notes.html" class="btn btn-outline-light btn-sm">Gerenciar notas</a>
+      </div>
+      <div class="notes-dashboard">
+        <p class="small text-muted-2 mb-3" data-notes-status></p>
+        <div class="notes-grid" data-notes-list></div>
+        <div class="notes-dashboard-empty text-muted-2 d-none" data-notes-empty>
+          Nenhuma nota encontrada ainda. <a href="notes.html" class="link-info">Crie sua primeira nota</a>.
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Rodapé (include) -->
   <div data-include="/assets/partials/footer.html"></div>
 
@@ -183,5 +206,6 @@
   <script src="assets/js/check-session.js" defer></script>
   <script src="assets/js/includes.js" defer></script>
   <script src="assets/js/auth-guard.js" defer></script>
+  <script src="assets/js/main-notes.js" defer></script>
 </body>
 </html>
