--- a/main.html
+++ b/main.html
@@ -199,7 +199,7 @@
       <div class="mt-5 text-center">
         <h3 class="h5 text-info fw-bold mb-3">Em breve 🚀</h3>
         <p class="text-muted mb-2">
-          Novas ferramentas de finanças, produtividade e estudo serão adicionadas aqui.
+          Novas ferramentas de produtividade e estudo serão adicionadas aqui.
         </p>
         <p class="text-muted mb-0 small">
           Tem alguma ideia? Use o atalho <strong>“Colaborar com o TPG Online”</strong> para mandar sua sugestão.
