--- a/index.html
+++ b/index.html
@@ -42,32 +42,59 @@
   <!-- ============================================================= -->
 
   <!-- Hero -->
-  <header class="hero section">
-    <div class="container">
-      <div class="row align-items-center g-4">
-        <div class="col-12 col-lg-6">
-          <h1 class="display-5 fw-bold">TPG Online</h1>
-          <p class="lead">Consultas rápidas, landing pages e muito mais.</p>
-          <div class="d-flex gap-2 flex-wrap">
-            <a class="btn btn-primary btn-lg" href="cnpj.html">Consultar CNPJ</a>
-            <a class="btn btn-outline-light btn-lg" href="cep.html">Consultar CEP</a>
-            <a class="btn btn-outline-light btn-lg" href="ncm.html">Consultar NCM</a>
-            <a class="btn btn-outline-light btn-lg" href="fipe.html">Consultar FIPE</a>
-            <a class="btn btn-outline-light btn-lg" href="qrcode.html">Gerar QR Code</a>
-            <a class="btn btn-outline-light btn-lg" href="calculadora-imc.html">Calculadora IMC</a>
-            <a href="https://wa.me/5518997329690?text=Ol%C3%A1%2C+tenho+interesse+em+criar+uma+landing+page" 
-               target="_blank" class="btn btn-success btn-lg">
-               📲 Criar Minha Landing Page
-            </a>
+  <header class='hero section'>
+    <div class='container'>
+      <div class='row align-items-center g-4'>
+        <div class='col-12 col-lg-6'>
+          <p class='text-info text-uppercase small fw-semibold mb-2'>Produtividade no TPG</p>
+          <h1 class='display-5 fw-bold mb-3'>Ferramentas gratuitas e um bloco de notas so seu</h1>
+          <p class='lead mb-3'>
+            Consulte CNPJ, CEP, NCM, gere utilitarios e mantenha suas notas pessoais salvas na nuvem.
+          </p>
+          <ul class='hero-checklist mb-4'>
+            <li>Acesso rapido a consultas essenciais</li>
+            <li>Crie um login gratuito e salve lembretes coloridos</li>
+            <li>Suas notas ficam sincronizadas em qualquer dispositivo</li>
+          </ul>
+          <div class='d-flex gap-2 flex-wrap mb-2'>
+            <a class='btn btn-primary btn-lg' href='login.html'>Entrar ou criar acesso</a>
+            <a class='btn btn-outline-light btn-lg' href='notes.html'>Ver bloco de notas</a>
+            <a class='btn btn-outline-light btn-lg' href='main.html'>Area logada</a>
+          </div>
+          <div class='hero-extra-links'>
+            <a href='cnpj.html'>Consultar CNPJ</a> -
+            <a href='cep.html'>Consultar CEP</a> -
+            <a href='ncm.html'>Consultar NCM</a> -
+            <a href='fipe.html'>Tabela FIPE</a> -
+            <a href='qrcode.html'>Gerar QR Code</a> -
+            <a href='calculadora-imc.html'>Calculadora IMC</a>
           </div>
         </div>
-        <div class="col-12 col-lg-6 text-center">
-          <img src="assets/img/hero.png" class="hero-illus" alt="Ilustração">
+        <div class='col-12 col-lg-6'>
+          <div class='hero-promo'>
+            <p class='promo-badge'>Novo recurso</p>
+            <h3 class='fw-bold text-white mb-2'>Bloco de notas pessoal</h3>
+            <p class='text-muted mb-3'>Escreva ideias, tarefas e lembretes e volte quando quiser. Nada se perde.</p>
+            <ul class='promo-list mb-4'>
+              <li>Escolha cores diferentes para cada nota</li>
+              <li>Edite, exclua e sincronize em segundos</li>
+              <li>Sem mensalidade e com acesso seguro</li>
+            </ul>
+            <a class='btn btn-info w-100 mb-3' href='login.html'>Quero criar meu login</a>
+            <div class='promo-note-preview'>
+              <p class='promo-note-title mb-1'>Checklist do dia</p>
+              <p class='promo-note-content mb-0'>
+                - Atualizar cadastro dos clientes
+                - Conferir notas fiscais
+                - Enviar proposta comercial
+              </p>
+              <span class='promo-note-meta small'>Salva automaticamente na sua conta</span>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </header>
-
   <!-- Seção de Ferramentas -->
   <section id="features" class="section py-5">
     <div class="container text-center">
