--- a/cnpj.html
+++ b/cnpj.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- SEO básico -->
   <title>Consulta de CNPJ • TPG Online</title>
-  <meta name="description" content="Consulta de CNPJ • TPG Online">
+  <meta name="description" content="Pesquise dados de empresas pelo CNPJ de forma simples e rápida no TPG Online.">
+  <meta name="robots" content="index,follow">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="http://tpgonline.com.br/cnpj.html">
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="TPG Online">
+  <meta property="og:title" content="Consulta de CNPJ • TPG Online">
+  <meta property="og:description" content="Pesquise dados de empresas pelo CNPJ de forma simples e rápida no TPG Online.">
+  <meta property="og:url" content="http://tpgonline.com.br/cnpj.html">
+
+  <!-- CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="stylesheet" href="assets/css/cnpj.css">
