--- a/calculadora-imc.html
+++ b/calculadora-imc.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- SEO básico -->
   <title>Calculadora de IMC • TPG Online</title>
-  <meta name="description" content="Calcule seu IMC de forma simples e veja a classificação específica para adultos e idosos.">
+  <meta name="description" content="Calcule seu IMC de forma simples e veja a classificação específica para adultos e idosos no TPG Online.">
+  <meta name="robots" content="index,follow">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="http://tpgonline.com.br/calculadora-imc.html">
+
+  <!-- Open Graph (para Google / WhatsApp / Facebook entenderem melhor a página) -->
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="TPG Online">
+  <meta property="og:title" content="Calculadora de IMC • TPG Online">
+  <meta property="og:description" content="Calcule seu IMC de forma simples e veja a classificação específica para adultos e idosos no TPG Online.">
+  <meta property="og:url" content="http://tpgonline.com.br/calculadora-imc.html">
+
+  <!-- CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="stylesheet" href="assets/css/imc.css">
+</head>
+
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
