--- a/cep.html
+++ b/cep.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- SEO básico -->
   <title>Consulta de CEP • TPG Online</title>
-  <meta name="description" content="Consulta de CEP • TPG Online">
+  <meta name="description" content="Consulte CEP e dados de endereço de forma simples e rápida no TPG Online.">
+  <meta name="robots" content="index,follow">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="http://tpgonline.com.br/cep.html">
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="TPG Online">
+  <meta property="og:title" content="Consulta de CEP • TPG Online">
+  <meta property="og:description" content="Consulte CEP e dados de endereço de forma simples e rápida no TPG Online.">
+  <meta property="og:url" content="http://tpgonline.com.br/cep.html">
+
+  <!-- CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="stylesheet" href="assets/css/cep.css">
-
 
    <!-- Google tag (gtag.js) -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
