--- a/colaborar.html
+++ b/colaborar.html
@@ -3,9 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Colaborar • TPG Online</title>
 
-  <!-- Bootstrap + Tema -->
+  <!-- SEO básico -->
+  <title>Colaborar • TPG Online</title>
+  <meta name="description" content="Ajude a manter o TPG Online no ar contribuindo com uma pequena doação para cobrir os custos de servidor e continuar o projeto ativo.">
+  <meta name="robots" content="index,follow">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="http://tpgonline.com.br/colaborar.html">
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="TPG Online">
+  <meta property="og:title" content="Colaborar • TPG Online">
+  <meta property="og:description" content="Ajude a manter o TPG Online no ar contribuindo com uma pequena doação para cobrir os custos de servidor e continuar o projeto ativo.">
+  <meta property="og:url" content="http://tpgonline.com.br/colaborar.html">
+
+  <!-- CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="stylesheet" href="assets/css/colaborar.css">
