--- a/cookies.html
+++ b/cookies.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Política de Privacidade • TPG Online</title>
+
+  <!-- SEO básico -->
+  <title>Política de Cookies • TPG Online</title>
+  <meta name="description" content="Entenda como o TPG Online utiliza cookies para melhorar sua experiência, guardar preferências e garantir funcionalidades essenciais.">
+  <meta name="robots" content="index,follow">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="http://tpgonline.com.br/cookies.html">
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="TPG Online">
+  <meta property="og:title" content="Política de Cookies • TPG Online">
+  <meta property="og:description" content="Entenda como o TPG Online utiliza cookies para melhorar sua experiência, guardar preferências e garantir funcionalidades essenciais.">
+  <meta property="og:url" content="http://tpgonline.com.br/cookies.html">
+
+  <!-- CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/theme.css">
 
