--- a/fipe.html
+++ b/fipe.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- SEO básico -->
   <title>Consulta Tabela FIPE • TPG Online</title>
-  <meta name="description" content="Consulta Tabela FIPE • TPG Online">
+  <meta name="description" content="Consulte valores de carros, motos e outros veículos pela Tabela FIPE de forma simples no TPG Online.">
+  <meta name="robots" content="index,follow">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="http://tpgonline.com.br/fipe.html">
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="TPG Online">
+  <meta property="og:title" content="Consulta Tabela FIPE • TPG Online">
+  <meta property="og:description" content="Consulte valores de carros, motos e outros veículos pela Tabela FIPE de forma simples no TPG Online.">
+  <meta property="og:url" content="http://tpgonline.com.br/fipe.html">
+
+  <!-- CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="stylesheet" href="assets/css/fipe.css">
@@ -24,6 +40,8 @@
    gtag('js', new Date());
    gtag('config', 'G-XZ6RD9SGHR');
  </script>
+
+
 </head>
 <body>
 
