--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Inicio • TPG Online</title>
-  <meta name="description" content="TPG Online">
+
+  <!-- SEO básico -->
+  <title>Início • TPG Online</title>
+  <meta name="description" content="Página inicial do TPG Online, com acesso rápido às ferramentas online, consultas e utilitários gratuitos.">
+  <meta name="robots" content="index,follow">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="http://tpgonline.com.br/">
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="TPG Online">
+  <meta property="og:title" content="Início • TPG Online">
+  <meta property="og:description" content="Página inicial do TPG Online, com acesso rápido às ferramentas online, consultas e utilitários gratuitos.">
+  <meta property="og:url" content="http://tpgonline.com.br/">
 
   <!-- Bootstrap + Tema -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="stylesheet" href="assets/css/index.css">
-
-  <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('consent', 'default', { 'ad_storage': 'denied', 'analytics_storage': 'denied' });
-    gtag('js', new Date());
-    gtag('config', 'G-XZ6RD9SGHR');
-  </script>
 
   <!-- Google Tag Manager -->
   <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -151,3 +155,21 @@
 
 </body>
 </html>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    window.dataLayer.push({
+      event: 'default_consent',
+      'gtm.consentMode': 'default',
+      ad_storage: 'denied',
+      analytics_storage: 'denied'
+    });
+
+    window.tpgUpdateConsent = function (granted) {
+      window.dataLayer.push({
+        event: 'update_consent',
+        'gtm.consentMode': 'update',
+        ad_storage: granted ? 'granted' : 'denied',
+        analytics_storage: granted ? 'granted' : 'denied'
+      });
+    };
+  </script>
