--- a/login.html
+++ b/login.html
@@ -2,14 +2,30 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Login - TPG Online</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- CSS específico do login -->
+  <!-- SEO básico -->
+  <title>Login • TPG Online</title>
+  <meta name="description" content="Acesse sua conta no TPG Online para utilizar as ferramentas, consultas e utilitários disponíveis na plataforma.">
+  <meta name="robots" content="index,follow">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="http://tpgonline.com.br/login.html">
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="TPG Online">
+  <meta property="og:title" content="Login • TPG Online">
+  <meta property="og:description" content="Acesse sua conta no TPG Online para utilizar as ferramentas, consultas e utilitários disponíveis na plataforma.">
+  <meta property="og:url" content="http://tpgonline.com.br/login.html">
+
+  <!-- CSS -->
   <link rel="stylesheet" href="assets/css/login.css" />
   <link rel="stylesheet" href="assets/css/theme.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
 </head>
+
 <body>
 
   <!-- ====== INCLUDES (carregados pelo assets/js/includes.js) ====== -->
