--- a/main.html
+++ b/main.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Área Logada • TPG Online</title>
-  <meta name="description" content="Área logada do TPG Online">
 
-  <!-- Bootstrap + Tema -->
+  <!-- SEO básico -->
+  <title>Área Logada • TPG Online</title>
+  <meta name="description" content="Área logada do TPG Online, com acesso ao painel principal, anotações e atalhos para as ferramentas da plataforma.">
+  <meta name="robots" content="noindex,nofollow">
+
+  <!-- Canonical (ajuste se o nome do arquivo/rota for diferente) -->
+  <link rel="canonical" href="http://tpgonline.com.br/main.html">
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="TPG Online">
+  <meta property="og:title" content="Área Logada • TPG Online">
+  <meta property="og:description" content="Área logada do TPG Online, com acesso ao painel principal, anotações e atalhos para as ferramentas da plataforma.">
+  <meta property="og:url" content="http://tpgonline.com.br/main.html">
+
+  <!-- CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="stylesheet" href="assets/css/main.css">
