--- a/notes.html
+++ b/notes.html
@@ -3,10 +3,24 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Minhas Notas • TPG Online</title>
-  <meta name="description" content="Bloco de notas pessoal por usuário no TPG Online.">
 
-  <!-- Bootstrap + Tema -->
+  <!-- SEO básico -->
+  <title>Minhas Notas • TPG Online</title>
+  <meta name="description" content="Bloco de notas pessoal por usuário no TPG Online para registrar lembretes e informações importantes.">
+  <meta name="robots" content="noindex,nofollow">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="http://tpgonline.com.br/notes.html">
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="TPG Online">
+  <meta property="og:title" content="Minhas Notas • TPG Online">
+  <meta property="og:description" content="Bloco de notas pessoal por usuário no TPG Online para registrar lembretes e informações importantes.">
+  <meta property="og:url" content="http://tpgonline.com.br/notes.html">
+
+  <!-- CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/theme.css">
   <link rel="stylesheet" href="assets/css/notes.css">
