--- a/qrcode.html
+++ b/qrcode.html
@@ -3,8 +3,22 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- SEO básico -->
   <title>Gerador de QR Code • TPG Online</title>
-  <meta name="description" content="Crie QR Codes personalizados para links, Wi-Fi, WhatsApp, textos e e-mails.">
+  <meta name="description" content="Crie QR Codes personalizados para links, Wi-Fi, WhatsApp, textos e e-mails de forma simples no TPG Online.">
+  <meta name="robots" content="index,follow">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="http://tpgonline.com.br/qrcode.html">
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="TPG Online">
+  <meta property="og:title" content="Gerador de QR Code • TPG Online">
+  <meta property="og:description" content="Crie QR Codes personalizados para links, Wi-Fi, WhatsApp, textos e e-mails de forma simples no TPG Online.">
+  <meta property="og:url" content="http://tpgonline.com.br/qrcode.html">
 
   <!-- Bootstrap + Tema principal -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
