--- a/terms.html
+++ b/terms.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Política de Privacidade • TPG Online</title>
+
+  <!-- SEO básico -->
+  <title>Termos de Uso • TPG Online</title>
+  <meta name="description" content="Leia os Termos de Uso do TPG Online, com as regras de acesso, responsabilidades, limitações e uso da plataforma.">
+  <meta name="robots" content="index,follow">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="http://tpgonline.com.br/terms.html">
+
+  <!-- Open Graph -->
+  <meta property="og:locale" content="pt_BR">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="TPG Online">
+  <meta property="og:title" content="Termos de Uso • TPG Online">
+  <meta property="og:description" content="Leia os Termos de Uso do TPG Online, com as regras de acesso, responsabilidades, limitações e uso da plataforma.">
+  <meta property="og:url" content="http://tpgonline.com.br/terms.html">
+
+  <!-- CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/theme.css">
-  
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-XZ6RD9SGHR"></script>
   <script>
