--- a/notes.html
+++ b/notes.html
@@ -132,6 +132,11 @@
         <div id="notes-status" class="small text-muted-2 mb-2"></div>
         <div id="notes-list" class="notes-grid"></div>
       </section>
+
+      <section class="text-center mt-5">
+        <p class="text-muted-2 mb-2">Precisa acessar os atalhos e outras ferramentas?</p>
+        <a href="main.html" class="btn btn-outline-info">Ir para o painel principal</a>
+      </section>
     </div>
   </main>
 
